# show_me_code

./: README.md
c++/arm_Inverse_kinematics  /: CMakeLists.txt  kinematics_solver.hpp  main.cpp
c++/aruco_demo/: CMakeLists.txt  demo.txt  main.cpp
c++/gaze_estimate/: CMakeLists.txt  face_detect.hpp  gaze_estimate.hpp  main.cpp  main.hpp
c++/sfm_demo/: CMakeLists.txt  README.md  main.cpp  multi_view_3D_reconstruction.cpp  multi_view_3D_reconstruction.h  my_matcher.cpp  my_matcher.h
c++/wav2lip_cpp/: AudioFile.h  CMakeLists.txt  audioProcPY.py  audioProcess.h  imageProcess.h  lmsDet.hpp  main.cpp  model.h  usePy.hpp  wavDrive.hpp
python/gaze_estimate/: face_detect.py  gaze_estimate.py  main.py  main_onnx.py  model.py  utils.py  可视化demo.py
python/model_zoom/: README.md  application.py  manage.py  requirements.txt  routes.py  setup.py
python/model_zoom/common/: content_type_maps.py  file_utils.py  oss.py  utils.py  vision_utils.py
python/model_zoom/common/vision/: yolo_detect.py
python/model_zoom/config/: base_setting.py  common.json  ossApi.json
python/model_zoom/controller/: __init__.py
python/model_zoom/controller/detect/: car_plate_rec.py  control.py  face.py  faceMatch.py  hwtRec.py  mask_detect.py  routes.py  trafficLightDetect.py
python/model_zoom/controller/detect/vehicle_count/: count.py  detect.py
python/model_zoom/controller/image_cls/: control.py  money_rec.py  routes.py  vegetable_rec.py  zcy_rec.py
python/model_zoom/controller/image_handle/: control.py  data_augment.py  routes.py
python/model_zoom/controller/nlp/: control.py  emo_analysis.py  poem_gen.py  predict_movie.py  routes.py  story_gen.py
python/model_zoom/controller/vision/: clipcap_ch_beautiful.py  control.py  face.py  routes.py  style_move_custom.py  vege_main.py
python/model_zoom/controller/vision/fast_style_move/: neural_style_script.py
python/model_zoom/controller/vision/vege/: __init__.py  vege_detect.py  vege_rec.py
python/model_zoom/controller/vision/zzsfp_ocr/: predict_system.py  utility.py  zzsfp.py
python/model_zoom/controller/vision/zzsfp_ocr/cls/: predict_cls.py
python/model_zoom/controller/vision/zzsfp_ocr/det/: postprocess.py  predict_det.py
python/model_zoom/controller/voice/: asr_onnx.py  control.py  fastspeech2_onnx.py  routes.py  tts_onnx.py  voicePrintRec.py  voice_feature_map.py
python/model_zoom/controller/voice/fastspeech2/: symbols.py
python/model_zoom/controller/voice/psp_tts/: __init__.py  data_process.py  prosody_txt.py  seq_with_label.py  treebanks.py
python/model_zoom/templates/: hello.html
(+4 files in other folders)
